<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.detailTvShow" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TStvDetailJudul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HarryHarryH arry tPottetPotPottetPottette rerPotter"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <fragment
            android:layout_marginTop="20dp"
            android:name="com.google.android.youtube.player.YouTubePlayerFragment"
            android:id="@+id/TSyoutubePlayerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/TSivDetailPoster"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                tools:src="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/TSsimpleTableLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stretchColumns="1">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- first element of the row-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/release_date"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/TStvDetailRilis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            android:text=": 24 March 2010"
                            android:textSize="12dp" />

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- first element of the row-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/episodes"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/TStvDetailEps"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:textColor="@color/black"
                            android:layout_column="1"
                            android:text=": 23"
                            android:textSize="12dp" />

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- first element of the row-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/genre"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/TStvDetailGenre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_column="1"
                            android:textColor="@color/black"
                            android:text=": Crime, Drama"
                            android:textSize="12dp" />

                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <!-- first element of the row-->
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textSize="12dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="15dp"
                            android:layout_marginStart="5dp"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text=":"
                                android:textColor="@color/black"
                                android:textSize="12sp"/>

                            <ImageView
                                android:layout_width="12dp"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_star_black_30dp"/>
                            <TextView
                                android:id="@+id/TStvDetailRate"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="8.2"
                                android:textColor="@color/black"
                                android:textSize="12sp"/>
                            <TextView
                                android:id="@+id/TStvDetailRateCount"
                                android:layout_marginStart="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="(2.156.667)"
                                android:textSize="12sp"
                                android:textStyle="italic"/>

                        </LinearLayout>

                    </TableRow>
                </TableLayout>




                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/short_desc"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/TStvDetailShortDesc"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:text="Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency."/>

                </ScrollView>


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/synopsis"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="20sp"/>
        <View
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/TStvDetailSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="12dp"
            android:text="sdsafasfa sdsafasfa sdsafasfa sdsafasfa sdsafasfa sdsafasfa sdsafasfa sdsafasfa sdsafasfa "/>

    </LinearLayout>
</ScrollView>